<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item android:title="@string/menu_group1_title">
            <menu>
                <item
                    android:id="@+id/nav_dashboard"
                    android:icon="@drawable/ic_home"
                    android:title="@string/dashboard" />
                <item
                    android:id="@+id/contact_info"
                    android:icon="@drawable/ic_call"
                    android:title="All Contacts"
                    android:visible="true" />
                <item
                    android:id="@+id/nav_chat"
                    android:icon="@drawable/ic_chat"
                    android:title="Chat"
                    android:visible="true" />
                <item
                    android:id="@+id/nav_chat_operation"
                    android:icon="@drawable/ic_chat"
                    android:title="Return/Accounts/Complain"
                    android:visible="false" />
                <item
                    android:id="@+id/postShipmentChatFragment"
                    android:icon="@drawable/ic_chat"
                    android:title="All Merchant List"
                    android:visible="true" />
            </menu>
        </item>
    </group>
    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item android:title="@string/menu_group2_title">
            <menu>
                <item
                    android:id="@+id/nav_operation"
                    android:icon="@drawable/ic_qrcode"
                    android:title="@string/operation_menu"/>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/logout"
                    android:visible="true" />

            </menu>
        </item>
    </group>
</menu>